Fixed universal styling, some alignment with the filtering buttons and put js and css for the filtering feature in the  js/css folder.

--- a/css/filtrering.css
+++ b/css/filtrering.css
@@ -7,6 +7,14 @@
     display: block;
   }
 
+  #Container {
+    display: flex;
+    justify-content: center; 
+    flex-wrap: wrap; 
+    gap: 1rem; 
+    margin-top: 1rem; 
+}
+
   .button {
     padding: 10px; 
     background-color: white; 
@@ -15,8 +23,8 @@
     font-size: 14px; 
     border-radius: 25px; 
     text-transform: uppercase; 
-    transition: all 0.3s ease; 
-
+    transition: all 0.3s ease;
+    font-family: 'Roboto', sans-serif; 
   }
 
   .button:hover {
@@ -30,3 +38,15 @@
     color: white; 
     border-color: white; 
   }
+
+  @media (max-width: 600px) {
+    .button {
+        padding: 0.375rem;
+        font-size: 0.625rem;
+        border-radius: 1rem;
+    }
+
+    #Container {
+        gap: 0.25rem;
+    }
+}
