--- a/css/products.css
+++ b/css/products.css
@@ -1,7 +1,7 @@
 body.products-body {
   background-color: #751717;
   margin: 0 auto;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .products-body #product-page-1, 
