--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -5,7 +8,13 @@
 body {
   color: #ecffeb;
   margin: 0 auto;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #751717;
+}
+
+p, li, label, button, input, textarea {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
 }
 
 .header-top {
@@ -19,6 +28,7 @@ body {
   border-bottom: 1px solid #ccc;
   position: relative;
   box-sizing: border-box;
+  min-height: 5.3125rem;;
 }
 
 .logo-header {
@@ -40,6 +50,8 @@ body {
   font-size: 1.5rem;
   margin: 0;
   font-weight: bold;
+  font-family: 'Cookie', cursive;
+  font-size: 2.2rem;
 }
 
 #home-christmas-image {
@@ -65,7 +77,7 @@ body {
 .right-link a {
   text-decoration: none;
   color: black;
-  font-size: 1rem;
+  font-size: 1.1rem;
   padding: 0.5rem 1rem;
   display: inline-block;
   transition: background-color 0.3s ease;
@@ -211,6 +223,7 @@ body {
     /* FOOTER STYLING */
 
     .footer {
+      font-family: 'Roboto', sans-serif;
       background-color: #005c00;
       padding: 0px 20px;
       position: relative;
@@ -231,9 +244,10 @@ body {
     }
 
     #footer-container h3 {
-      font-size: 1.2rem;
+      font-size: 2rem;
       margin-top: 1.2rem;
       font-weight: bold;
+      font-family: 'Cookie', cursive;
     }
 
     .li-header {
